# ifm-2025-assignment

./: .replit  app.py  beta.csv  beta_rol.csv  cover_page.py  draft_2_page.py  live_dashboard.py  main_story_page.py  new.py  port.csv  references_page.py  replit.md  requirement.txt  returns_xts_1763848584845.csv  sidebar_navigation.py  theme_config.py  theory_page.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
attached_assets/: beta_ACB_1764121951709.csv  beta_DBD_1764121951709.csv  price.csv  (+11 more)
attached_assets/extracted/StockPortfolioStory-4/: .replit  app.py  main_story_page.py  pyproject.toml  sidebar_navigation.py  theory_page.py
attached_assets/extracted/StockPortfolioStory-4/.streamlit/: config.toml
attached_assets/extracted/StockPortfolioStory-4/attached_assets/: Pasted--C-u-chuy-n-u-t-c-a-Nguy-n-V-n-M-i-L-y-c-m-h-ng-t-cu-n-s-ch-n-i-ti-ng-K-to-n-v-a-h--1763951791962_1763951791962.txt  Pasted--Navigation-Navigation-Welcome-Main-Story-Theory-Framework-Draft-S-1763873705969_1763873705970.txt  Pasted--Navigation-Navigation-Welcome-Main-Story-Theory-Framework-Draft-S-1763947745242_1763947745243.txt  Pasted--Navigation-Portfolio-Settings-Historical-Data-Range-Select-Time-Period-C--1763970941373_1763970941375.txt  Pasted--Portfolio-Settings-Historical-Data-Range-Select-Time-Period-6-Months-C-u-chu-1764044473394_1764044473397.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-ternary-Aaxis-t-1763948851762_1763948851766.txt  beta_HPG_1764121951709.csv  result_output_1763851487710.csv  rf-rm_1763969726233.csv
