[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.2.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "pyportfolioopt>=0.3.1",
    "reportlab>=4.4.5",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]

